crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__collapse_groups__collapse_groups-11.snap
---
source: crates/oxvg_optimiser/src/jobs/collapse_groups.rs
expression: "test_config(r#\"{ \"collapseGroups\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- Should replace inheritable value -->\n\t<g color=\"red\">\n\t\t<g color=\"inherit\" fill=\"none\" stroke=\"none\">\n\t\t\t<circle cx=\"130\" cy=\"80\" r=\"60\" fill=\"currentColor\"/>\n\t\t\t<circle cx=\"350\" cy=\"80\" r=\"60\" stroke=\"currentColor\" stroke-width=\"4\"/>\n\t\t</g>\n\t</g>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- Should replace inheritable value -->
    <g color="red" fill="none" stroke="none">
        <circle cx="130" cy="80" r="60" fill="currentColor"/>
        <circle cx="350" cy="80" r="60" stroke="currentColor" stroke-width="4"/>
    </g>
</svg>
