crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__collapse_groups__collapse_groups-2.snap
---
source: crates/oxvg_optimiser/src/jobs/collapse_groups.rs
expression: "test_config(r#\"{ \"collapseGroups\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- Should pass all inheritable attributes to children -->\n    <g>\n        <g attr1=\"val1\">\n            <path d=\"...\"/>\n        </g>\n    </g>\n    <g attr1=\"val1\">\n        <g attr2=\"val2\">\n            <path d=\"...\"/>\n        </g>\n    </g>\n    <g attr1=\"val1\">\n        <g>\n            <path d=\"...\"/>\n        </g>\n        <path d=\"...\"/>\n    </g>\n    <g attr1=\"val1\">\n        <g attr2=\"val2\">\n            <path d=\"...\"/>\n        </g>\n        <path d=\"...\"/>\n    </g>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- Should pass all inheritable attributes to children -->
    
        
            <path d="..." attr1="val1"></path>
        
    
    
        
            <path d="..." attr2="val2" attr1="val1"></path>
        
    
    <g attr1="val1">
        
            <path d="..."></path>
        
        <path d="..."></path>
    </g>
    <g attr1="val1">
        
            <path d="..." attr2="val2"></path>
        
        <path d="..."></path>
    </g>
</svg>
