crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__collapse_groups__collapse_groups-3.snap
---
source: crates/oxvg_optimiser/src/jobs/collapse_groups.rs
expression: "test_config(r#\"{ \"collapseGroups\": true }\"#,\n        Some(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- Should remove inheritable overridden attributes -->\n    <g attr1=\"val1\">\n        <g fill=\"red\">\n            <path fill=\"green\" d=\"...\"/>\n        </g>\n        <path d=\"...\"/>\n    </g>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- Should remove inheritable overridden attributes -->
    <g attr1="val1">
        
        <path d="..." fill="green"></path>
            
        <path d="..."></path>
    </g>
</svg>
