crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__collapse_groups__collapse_groups-4.snap
---
source: crates/oxvg_optimiser/src/jobs/collapse_groups.rs
expression: "test_config(r#\"{ \"collapseGroups\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- Should remove group with equal attribute values to child -->\n    <g attr1=\"val1\">\n        <g attr2=\"val2\">\n            <path attr2=\"val2\" d=\"...\"/>\n        </g>\n        <g attr2=\"val2\">\n            <path attr2=\"val3\" d=\"...\"/>\n        </g>\n    </g>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- Should remove group with equal attribute values to child -->
    <g attr1="val1">
        <path attr2="val2" d=""/>
        <g attr2="val2">
            <path attr2="val3" d=""/>
        </g>
    </g>
</svg>
