crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__collapse_groups__collapse_groups-5.snap
---
source: crates/oxvg_optimiser/src/jobs/collapse_groups.rs
expression: "test_config(r#\"{ \"collapseGroups\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- Should join transform attributes into `transform=\"rotate(45) scale(2)\"` -->\n    <g attr1=\"val1\">\n        <g transform=\"rotate(45)\">\n            <path transform=\"scale(2)\" d=\"...\"/>\n        </g>\n        <path d=\"...\"/>\n    </g>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- Should join transform attributes into `transform="rotate(45) scale(2)"` -->
    <g attr1="val1">
        <path transform="rotate(45)scale(2)" d=""/>
        <path d=""/>
    </g>
</svg>
