crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__collapse_groups__collapse_groups-6.snap
---
source: crates/oxvg_optimiser/src/jobs/collapse_groups.rs
expression: "test_config(r#\"{ \"collapseGroups\": true }\"#,\n        Some(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- Should preserve groups with `clip-path` -->\n    <clipPath id=\"a\">\n       <path d=\"...\"/>\n    </clipPath>\n    <clipPath id=\"b\">\n       <path d=\"...\"/>\n    </clipPath>\n    <g transform=\"matrix(0 -1.25 -1.25 0 100 100)\" clip-path=\"url(#a)\">\n        <g transform=\"scale(.2)\">\n            <path d=\"...\"/>\n            <path d=\"...\"/>\n        </g>\n    </g>\n    <g transform=\"matrix(0 -1.25 -1.25 0 100 100)\" clip-path=\"url(#a)\">\n        <g transform=\"scale(.2)\">\n            <g>\n                <g clip-path=\"url(#b)\">\n                    <path d=\"...\"/>\n                    <path d=\"...\"/>\n                </g>\n            </g>\n        </g>\n    </g>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- Should preserve groups with `clip-path` -->
    <clipPath id="a">
       <path d="..."></path>
    </clipPath>
    <clipPath id="b">
       <path d="..."></path>
    </clipPath>
    <g transform="matrix(0 -1.25 -1.25 0 100 100)" clip-path="url(#a)">
        <g transform="scale(.2)">
            <path d="..."></path>
            <path d="..."></path>
        </g>
    </g>
    <g transform="matrix(0 -1.25 -1.25 0 100 100)" clip-path="url(#a)">
        
        
            <g clip-path="url(#b)" transform="scale(.2)">
                    <path d="..."></path>
                    <path d="..."></path>
                </g>
                
            
    </g>
</svg>
