crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__collapse_groups__collapse_groups-7.snap
---
source: crates/oxvg_optimiser/src/jobs/collapse_groups.rs
expression: "test_config(r#\"{ \"collapseGroups\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- Should preserve groups with `clip-path` and `mask` -->\n    <clipPath id=\"a\">\n       <path d=\"...\"/>\n    </clipPath>\n    <path d=\"...\"/>\n    <g clip-path=\"url(#a)\">\n        <path d=\"...\" transform=\"scale(.2)\"/>\n    </g>\n    <g mask=\"url(#a)\">\n        <path d=\"...\" transform=\"scale(.2)\"/>\n    </g>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- Should preserve groups with `clip-path` and `mask` -->
    <clipPath id="a">
        <path d=""/>
    </clipPath>
    <path d=""/>
    <g clip-path="url(#a)">
        <path d="" transform="scale(.2)"/>
    </g>
    <g mask="url(#a)">
        <path d="" transform="scale(.2)"/>
    </g>
</svg>
