crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__collapse_groups__collapse_groups-8.snap
---
source: crates/oxvg_optimiser/src/jobs/collapse_groups.rs
expression: "test_config(r#\"{ \"collapseGroups\": true }\"#,\nSome(r##\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- Should preserve groups with `id` or animation children -->\n    <g stroke=\"#000\">\n        <g id=\"star\">\n            <path id=\"bar\" d=\"...\"/>\n        </g>\n    </g>\n    <g>\n        <animate id=\"frame0\" attributeName=\"visibility\" values=\"visible\" dur=\"33ms\" begin=\"0s;frame27.end\"/>\n        <path d=\"...\" fill=\"#272727\"/>\n        <path d=\"...\" fill=\"#404040\"/>\n        <path d=\"...\" fill=\"#2d2d2d\"/>\n    </g>\n    <g transform=\"rotate(-90 25 0)\">\n        <circle stroke-dasharray=\"110\" r=\"20\" stroke=\"#10cfbd\" fill=\"none\" stroke-width=\"3\" stroke-linecap=\"round\">\n            <animate attributeName=\"stroke-dashoffset\" values=\"360;140\" dur=\"2.2s\" keyTimes=\"0;1\" calcMode=\"spline\" fill=\"freeze\" keySplines=\"0.41,0.314,0.8,0.54\" repeatCount=\"indefinite\" begin=\"0\"/>\n            <animateTransform attributeName=\"transform\" type=\"rotate\" values=\"0;274;360\" keyTimes=\"0;0.74;1\" calcMode=\"linear\" dur=\"2.2s\" repeatCount=\"indefinite\" begin=\"0\"/>\n        </circle>\n    </g>\n</svg>\"##))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- Should preserve groups with `id` or animation children -->
    <g stroke="#000">
        <g id="star">
            <path id="bar" d="..."/>
        </g>
    </g>
    <g>
        <animate id="frame0" attributeName="visibility" values="visible" dur="33ms" begin="0s;frame27.end"/>
        <path d="..." fill="#272727"/>
        <path d="..." fill="#404040"/>
        <path d="..." fill="#2d2d2d"/>
    </g>
    <g transform="rotate(-90 25 0)">
        <circle stroke-dasharray="110" r="20" stroke="#10cfbd" fill="none" stroke-width="3" stroke-linecap="round">
            <animate attributeName="stroke-dashoffset" values="360;140" dur="2.2s" keyTimes="0;1" calcMode="spline" fill="freeze" keySplines="0.41,0.314,0.8,0.54" repeatCount="indefinite" begin="0"/>
            <animateTransform attributeName="transform" type="rotate" values="0;274;360" keyTimes="0;0.74;1" calcMode="linear" dur="2.2s" repeatCount="indefinite" begin="0"/>
        </circle>
    </g>
</svg>
